--- a/index.html
+++ b/index.html
@@ -208,6 +208,12 @@
 .intro p + p {
     margin-top: 20px;  /* Jarak 20px di atas paragraf kedua */
 }
+    .intro h2 {
+    font-size: 1.8em;
+    margin-bottom: 15px;
+    border: none; /* Hilangkan border jika ada */
+    padding: 0; /* Hilangkan padding jika ada */
+}
     </style>
 </head>
 <body>
