--- a/index.html
+++ b/index.html
@@ -208,11 +208,12 @@
 .intro p + p {
     margin-top: 20px;  /* Jarak 20px di atas paragraf kedua */
 }
-    .intro h2 {
+    .intro p strong {
     font-size: 1.8em;
     margin-bottom: 15px;
     border: none; /* Hilangkan border jika ada */
     padding: 0; /* Hilangkan padding jika ada */
+    color: #2c3e50;
 }
     </style>
 </head>
