--- a/index.html
+++ b/index.html
@@ -210,10 +210,11 @@
 }
     .intro p strong {
     font-size: 1.8em;
-    margin-bottom: 15px;
-    border: none; /* Hilangkan border jika ada */
-    padding: 0; /* Hilangkan padding jika ada */
+    font-weight: bold;
+    line-height: 1.4;
     color: #2c3e50;
+    display: block; /* Tambahkan ini agar menjadi baris terpisah */
+    margin-bottom: 10px; /* Jarak dengan paragraf berikutnya */
 }
     </style>
 </head>
